History
=======

Version 0.6.2 - Unreleased
--------------------------

- changed batch_size in browser/channel.py to 30 to stay at plone's 
  default. [saily]

- german translation updated. [saily]

- rebuild of collective.dancing.pot using i18ndude. Some translation
  updates needed. [saily]


Version 0.6.1 - 2008-08-22
--------------------------

- On reinstall, advise QuickInstaller not to delete the five.intid
  tool that we set up during installation.  This fixes the brokenness
  of the subscription catalogs after a reinstall.  A typical error
  you'd see would look like::

    ...
     Module collective.singing.subscribe, line 227, in subscription_modified
     Module collective.singing.subscribe, line 214, in _catalog_subscription
     Module five.intid.intid, line 36, in getId
     Module zope.app.intid, line 86, in getId
    KeyError: SimpleSubscription ...

  No migration is available at this point.  Contact us if you need
  help writing one.  Note that the use of QuickInstaller
  reinstallation isn't required with Singing & Dancing.  For how to
  run upgrades from one version to the next, please see the Upgrade_
  section.  A QuickInstaller reinstallation will not run these
  upgrades for you.  [nouri]

Version 0.6.0 - 2008-08-21
--------------------------

- Update to use Singing's new IMessageAssemble API. [nouri]

- Use batching for the subscriptions management view.  Also, reshuffle
  the order of tabs in the channel administration view.  Most notably:
  move the "Subscriptions" tab to the first position to allow more
  comfortable editing. [nouri]

Version 0.5.1 - 2008-08-15
--------------------------

- Fixed a bug where a collector would have a ``Title`` property; this
  should be a method. [malthe]

- Added permissions to send, preview and manage newsletter. No upgrade
  steps required - just reinstall. By default - send and preview is 
  allowed to reviewer and manager role, manage newsletters for 
  managers only. [saily]
